--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     </head>
     <body>
         <header>
+            <div class="heading">
+                <h2 >Calculator  </h2>
+                <p >~ dora-01</p>
+            </div>
+            <hr>
             <div class="calculator">
-                <h2 class="heading">Calculator  </h2>
-                <p class="heading">~ dora-01</p>
                 <div class="section1">
-                    <div class="displayBox">
                         <p id="input"> </p>
                         <p id="output">0 </p>
-                    </div>
                 </div>
                 <div class="section2">
                     <button onclick="basic(7)">7</button>
